[workspace]
members = [
    ".",
    "example_actix",
    "example_axum",
]

[package]
name = "swaggapi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["swagger-ui"]
swagger-ui = ["dep:swagger-ui"]

actix = ["dep:actix-web"]
axum = ["dep:axum", "dep:bytes"]

[dependencies]
swaggapi-macro = { version = "0.1.0", path = "./swaggapi-macro" }
openapiv3 = "~2"
indexmap = "~2"
mime = "~0.3"
schemars = "~0.8"
log = "~0.4"
serde = "~1"
serde_json = "~1"
swagger-ui = { version = "0.1.5", optional = true }

actix-web = { version = "~4", optional = true }

axum = { version = "~0.7", optional = true }
bytes = { version = "~1", optional = true }