[package]
name = "example_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "~0.10"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
schemars = { version = "~0.8", features = ["uuid1"] }
uuid = { version = "~1", features = ["v4", "serde"] }

swaggapi = { path = "..", features = ["actix"] }
actix-web = "~4"