[package]
name = "swaggapi-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "~2", features = ["full"] }
quote = "~1"
proc-macro2 = "~1"
